main/default/objects/Proactive_Case_Occurrence_Setting__c/Proactive_Case_Occurrence_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>configuration settings for Account Scheduled Tasks controlling Proactive Cases</description>
    <label>Proactive Case Occurrence Settings</label>
</CustomObject>