main/default/objects/Proactive_Case_Occurrence_Setting__c/fields/Maximum_MRR__c.field-meta.xml
<CustomField>
    <fullName>Maximum_MRR__c</fullName>
    <label>Maximum MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>