main/default/objects/Proactive_Case_Occurrence_Setting__c/fields/Minimum_MRR__c.field-meta.xml
<CustomField>
    <fullName>Minimum_MRR__c</fullName>
    <inlineHelpText>minimum mrr to active this rule.</inlineHelpText>
    <label>Minimum MRR</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>