main/default/objects/Proactive_Case_Occurrence_Setting__c/fields/Occurrence_Day_Offset__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Day_Offset__c</fullName>
    <description>no use for category = &#39;Year&#39;
when category = &#39;Month&#39; Last = last day of the month</description>
    <inlineHelpText>1st, 2nd, 3rd, 4th, Last</inlineHelpText>
    <label>Occurrence Day Offset</label>
    <length>32</length>
    <type>Text</type>
</CustomField>