main/default/objects/Proactive_Case_Occurrence_Setting__c/fields/Rotating_Proactive_Type__c.field-meta.xml
<CustomField>
    <fullName>Rotating_Proactive_Type__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>enables rotation of proactive case types.</inlineHelpText>
    <label>Rotating Proactive Type</label>
    <type>Checkbox</type>
</CustomField>