main/default/objects/Proactive_Case_Occurrence_Setting__c/fields/Starting_Activity__c.field-meta.xml
<CustomField>
    <fullName>Starting_Activity__c</fullName>
    <inlineHelpText>Account Review, Contact</inlineHelpText>
    <label>Starting Activity</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>